<resources>
    <string name="app_name">MechaCare</string>
    <string name="start">Mulai</string>
    <string name="welcome">Selamat datang di MechaCare, solusi cepat dan mudah untuk menemukan bengkel dan mekanik terpercaya di sekitar Anda, kapan saja!</string>
    <string name="email">Email</string>
    <string name="input_email">Masukkan Email Anda....</string>
    <string name="password">Password</string>
    <string name="input_password">******</string>
    <string name="login">Login</string>
    <string name="daftar">Belum punya akun? Klik Untuk Daftar</string>
    <string name="register">Register</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="input_nama_pengguna">Masukkan Nama Pengguna Anda....</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="cari">Cari.....</string>
    <string name="selamat_datang">Selamat Datang di MechaCare</string>
    <string name="layanan">Layanan MechaCare</string>
    <string name="pencarian_bengkel_terdekat">Pencarian Bengkel Terdekat</string>
    <string name="jual_beli_sparepart">Jual Beli Sparepart</string>
    <string name="home_service">Home Service</string>
    <string name="riwayat_service">Riwayat Service</string>
    <string name="teks_berita">Cara Menghitung Volume Oli yang Tepat untuk Motor Mati</string>
    <string name="nama_bengkel">Bengkel cuplis M2R</string>
    <string name="alamat_bengkel">Jl. Abadi No.101–63, Tj. Rejo, Kec. Medan Sunggal, Kota Medan, Sumatera Utara 20122</string>
    <string name="maps">Maps</string>
    <string name="nama">Alvian</string>
    <string name="label_jenis_kelamin">Jenis Kelamin</string>
    <string name="jenis_kelamin">Laki-Laki</string>
    <string name="label_tanggal_lahir">Tanggal Lahir</string>
    <string name="detail_akun">Detail Akun</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="email_isi">alvian@gmail.com</string>
    <string name="password_isi">*******</string>
    <string name="label_telepon">Telepon</string>
    <string name="Telepon_isi">081234567890</string>"
    <string name="profile">Profile</string>"
    <string name="tanggal_lahir">13–03–2004</string>
    <string name="ganti_kanvas_rem">Ganti Kanvas Rem</string>
    <string name="jenis_service">Jenis Service</string>
    <string name="tanggal_service">02-12-2024</string>
    <string name="jenis_kendaraan">Jenis Kendaraan</string>
    <string name="honda_vario">Honda Vario</string>
    <string name="biaya_service">Biaya Service</string>
    <string name="total_service">Rp.50.000</string>
    <string name="tv_edit_profile">Edit Profile</string>"


</resources>