<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".login">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="50sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/lllogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="start"
        android:background="@drawable/login_background"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pengguna"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            />

        <!-- Input Email -->
        <EditText
            android:id="@+id/nama_pengguna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_nama_pengguna"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="16dp" />
<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            />

        <!-- Input Email -->
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            />
        <!-- Input Password -->
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            />
        <!-- Input Password -->
        <EditText
            android:id="@+id/konfirmasiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="24dp" />

        <!-- Tombol Login -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/btn_login"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- Tombol Daftar -->


    </LinearLayout>
    <TextView
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/lllogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>