<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/informasipribadi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/tv_jenis_service_bengkel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@id/iv_arrowback"
    android:background="@drawable/profile_border"
    android:layout_marginHorizontal="15dp"
    android:padding="15dp"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:id="@+id/llinformasipribadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:src="@drawable/edit"
            android:layout_weight="0"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/tanggal_service"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/tanggal_service"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:textStyle="bold"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/label_jenis_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llinformasipribadi"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_jenis_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganti_kanvas_rem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_jenis_service"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/label_jenis_kendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kendaraan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jenis_service"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_jenis_kendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/honda_vario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_jenis_kendaraan"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/label_biaya_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biaya_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jenis_kendaraan"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_biaya_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_biaya_service"
        android:textStyle="bold"
        android:textColor="@color/black"
        />




</androidx.constraintlayout.widget.ConstraintLayout>

