<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBengkel">


    <ImageView
        android:id="@+id/iv_arrowback"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_nama_bengkel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrowback"
        app:layout_constraintTop_toTopOf="@id/iv_arrowback"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/informasipribadi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_bengkel"
            app:layout_constraintBottom_toTopOf="@id/detailakun"
            app:layout_constraintStart_toStartOf="@id/iv_arrowback"
            android:background="@drawable/profile_border"
            android:layout_marginHorizontal="10dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/llinformasipribadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"


                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/informasi_pribadi"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="start"
                />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/edit"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Edit"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/label_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_pengguna"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llinformasipribadi"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_nama"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/label_jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_jenis_kelamin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nama"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_jenis_kelamin"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/label_tanggal_lahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tanggal_lahir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_jenis_kelamin"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_tanggal_lahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_tanggal_lahir"
                android:textStyle="bold"
                android:textColor="@color/black"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailakun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/informasipribadi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_arrowback"
        android:background="@drawable/profile_border"
        android:layout_marginHorizontal="10dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/lldetailakun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/informasi_pribadi"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="start"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/edit"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Edit"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lldetailakun"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_isi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_email"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_isi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_password"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/label_telepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_telepon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_telepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Telepon_isi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_telepon"
            android:textStyle="bold"
            android:textColor="@color/black"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>