<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".login">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-300dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tvlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="50sp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome"
        android:textSize="20sp"

        android:textColor="@color/white"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvwelcome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>